# SpectraBreast-Vision

./: .gitignore  README.md  detect_aruco.py  gsplat_pipeline.py  helpers.py  hyperspectral_inspector.py  intrinsic_calibration.py  jobrequest  mast3r_pipeline.py  pyproject.toml  requirements.txt  sandbox.ipynb  test_numpy.py  test_out.py  test_rerun.py  vggt_pipeline.py  workshop.ipynb
camera_parameters/: camera2ee.npy  distortions.npy  intrinsics.npy  intrinsics_fromlorenzo.npy
camera_poses/: pose_0001.txt  pose_0002.txt  pose_0003.txt  pose_0004.txt  pose_0005.txt  pose_0006.txt  pose_0007.txt  pose_0008.txt  pose_0009.txt  pose_0010.txt  pose_0011.txt  pose_0012.txt  pose_0013.txt  pose_0014.txt  pose_0016.txt  pose_0017.txt  pose_0018.txt  pose_0019.txt  pose_0020.txt  pose_0021.txt
configs/: default.yaml
nerf_data/: transforms.json
reconstruction_vggt/: camera_poses_output_frame.npy  camera_poses_reconstruction.npy  extracted_camera_poses.npy  intrinsics_gt_network_geometry.npy  intrinsics_predicted.npy  predicted_to_gt_similarity.npy  vggt_extracted_cloud_params.json  vggt_metric_aligned_dense_params.json
spectra/: __init__.py  __main__.py  align.py  aruco.py  calibration.py  cli.py  config.py  coordinates.py  helpers_bridge.py  inputs.py  io_utils.py  marker_ba.py  pipeline.py  rerun_logging.py  surface.py  transforms.py  tui.py  viewer.py
spectra.egg-info/: PKG-INFO  SOURCES.txt
spectra/backends/: __init__.py  mast3r_backend.py  types.py  vggt_backend.py
